--- a/public/cesma.css
+++ b/public/cesma.css
@@ -33,3 +33,11 @@
 .menu-items li a {
     padding-left: 10px;
 }
+
+.set-div-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    transform: translate(-50%, -50%);
+}
