--- a/public/css/cesma.css
+++ b/public/css/cesma.css
@@ -64,6 +64,10 @@
     z-index: 999;
 }
 
+thead th:hover {
+    cursor: pointer;
+}
+
 .no-use {
     height: 100%;
     width: 100%;
@@ -72,7 +76,7 @@
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
-    
+
 }
 
 .is-offline {
