UI improvements, Fix more than 2 pubkeys

--- a/public/css/cesma.css
+++ b/public/css/cesma.css
@@ -192,3 +192,18 @@ thead th:hover {
       opacity: 0;
     }
   }
+
+
+.custom-button-in-port-table {
+  padding: 2.5px;
+  height: auto;
+  width: 100%;
+}
+
+.is-80 {
+    width: 80%;	
+}
+
+.has-custom-text-warning {
+  color: #ff7600 !important;
+}
