--- a/public/css/cesma.css
+++ b/public/css/cesma.css
@@ -242,7 +242,7 @@ thead th:hover {
 
 
 html, body {
-  font-size: 13px !important;
+  font-size: 0.9em !important;
   /* font-family: 'Nunito', sans-serif; */
   /* font-family: 'Raleway', sans-serif; */
   font-family: 'Titillium Web', sans-serif;
