--- a/public/css/cesma.css
+++ b/public/css/cesma.css
@@ -1,196 +1,213 @@
 @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&family=Raleway:wght@300;400;700&family=Titillium+Web:wght@300;400;700&display=swap');
+
 .is-logo {
-    margin-top: 5px;
-    font-family: 'Kdam Thmor Pro', sans-serif;
-    letter-spacing: 0px;
-    font-size: 33px;
+  margin-top: 5px;
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  letter-spacing: 0px;
+  font-size: 33px;
 }
 
 .is-menu {
-    min-width: 180px;
-    min-height: 100vh;
-    max-height: 100vh;
-    z-index: 39;
+  min-width: 180px;
+  min-height: 100vh;
+  max-height: 100vh;
+  z-index: 39;
 }
 
 .menu {
-    border-right: 1px solid #4e5d6c;
-    width: 180px;
-    position: fixed;
-    min-height: 100vh;
+  border-right: 1px solid #4e5d6c;
+  width: 180px;
+  position: fixed;
+  min-height: 100vh;
 }
 
 .menu-label {
-    padding-left: 10px;
+  padding-left: 10px;
 }
 
 .menu-list a {
-    padding-top: 2px !important;
-    padding-bottom: 2px !important;
+  padding-top: 2px !important;
+  padding-bottom: 2px !important;
 }
 
 .menu-items {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .menu-items li a {
-    padding-left: 10px;
+  padding-left: 10px;
 }
 
 .set-div-center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 500px;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  transform: translate(-50%, -50%);
 }
 
 .ms-container .content {
-    margin-bottom: 5px;
-    font-weight: bold;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
 .hover-underline:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .always-visible {
-    position: fixed !important;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999;
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
 }
 
 thead th:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .no-use {
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
 
 }
 
 .is-offline {
-    color: red;
+  color: red;
 }
 
 .is-online {
-    color: green;
+  color: green;
 }
 
 .location_dot {
-    font-size: 22px;
-    margin-top: 5px;
-    margin-left: 3px;
-    margin-right: 10px;
+  font-size: 22px;
+  margin-top: 5px;
+  margin-left: 3px;
+  margin-right: 10px;
 }
 
 .online_status {
-    vertical-align: middle;
-    margin-bottom: 5px;
-    font-size: 22px;
+  vertical-align: middle;
+  margin-bottom: 5px;
+  font-size: 22px;
 }
 
 .is-blue {
-    background-color: rgb(7, 148, 204) !important;
+  background-color: rgb(7, 148, 204) !important;
 }
 
 .is-username-info {
-    position: absolute;
-    bottom: 2.5px;
-    font-size: 0.75em;
-    left: 50%;
-    transform: translate(-50%, -19%);
+  position: absolute;
+  bottom: 2.5px;
+  font-size: 0.75em;
+  left: 50%;
+  transform: translate(-50%, -19%);
 }
 
 .lds-spinner {
-    display: inline-block;
-    position: relative;
-    margin-left: -12px;
-    margin-top: -10px;
-    scale: 0.25;
-    width: 30px;
-    height: 25px;
+  display: inline-block;
+  position: relative;
+  margin-left: -12px;
+  margin-top: -10px;
+  scale: 0.25;
+  width: 30px;
+  height: 25px;
+}
+
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: #ffaa0e;
+}
+
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
   }
-  .lds-spinner div {
-    transform-origin: 40px 40px;
-    animation: lds-spinner 1.2s linear infinite;
+
+  100% {
+    opacity: 0;
   }
-  .lds-spinner div:after {
-    content: " ";
-    display: block;
-    position: absolute;
-    top: 3px;
-    left: 37px;
-    width: 6px;
-    height: 18px;
-    border-radius: 20%;
-    background: #ffaa0e;
-  }
-  .lds-spinner div:nth-child(1) {
-    transform: rotate(0deg);
-    animation-delay: -1.1s;
-  }
-  .lds-spinner div:nth-child(2) {
-    transform: rotate(30deg);
-    animation-delay: -1s;
-  }
-  .lds-spinner div:nth-child(3) {
-    transform: rotate(60deg);
-    animation-delay: -0.9s;
-  }
-  .lds-spinner div:nth-child(4) {
-    transform: rotate(90deg);
-    animation-delay: -0.8s;
-  }
-  .lds-spinner div:nth-child(5) {
-    transform: rotate(120deg);
-    animation-delay: -0.7s;
-  }
-  .lds-spinner div:nth-child(6) {
-    transform: rotate(150deg);
-    animation-delay: -0.6s;
-  }
-  .lds-spinner div:nth-child(7) {
-    transform: rotate(180deg);
-    animation-delay: -0.5s;
-  }
-  .lds-spinner div:nth-child(8) {
-    transform: rotate(210deg);
-    animation-delay: -0.4s;
-  }
-  .lds-spinner div:nth-child(9) {
-    transform: rotate(240deg);
-    animation-delay: -0.3s;
-  }
-  .lds-spinner div:nth-child(10) {
-    transform: rotate(270deg);
-    animation-delay: -0.2s;
-  }
-  .lds-spinner div:nth-child(11) {
-    transform: rotate(300deg);
-    animation-delay: -0.1s;
-  }
-  .lds-spinner div:nth-child(12) {
-    transform: rotate(330deg);
-    animation-delay: 0s;
-  }
-  @keyframes lds-spinner {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-    }
-  }
+}
 
 
 .custom-button-in-port-table {
@@ -200,7 +217,7 @@ thead th:hover {
 }
 
 .is-80 {
-    width: 80%;	
+  width: 80%;
 }
 
 .has-custom-text-warning {
@@ -230,7 +247,8 @@ thead th:hover {
   vertical-align: middle;
 }
 
-html, body {
+html,
+body {
   font-size: 0.95em !important;
   font-family: 'Titillium Web', sans-serif;
 
@@ -243,8 +261,15 @@ table thead tr th label {
 .site-selection {
   width: 100%;
 }
+
 .site-selection select {
   width: 100% !important;
   height: 30px;
   background-color: #b6bbc0 !important;
+}
+
+.scroll-to-top {
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
 }
